[package]
name = "axum-test-helper"
version = "0.2.0"
edition = "2021"
categories = ["development-tools::testing"]
description = "Extra utilities for axum"
homepage = "https://github.com/cloudwalk/axum-test-helper"
keywords = ["axum", "test", "test-framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cloudwalk/axum-test-helper"

[dependencies]
axum = "0.6"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"], default-features = false }
http = "0.2.8"
http-body = "0.4.5"
bytes = "1.0"
tower = "0.4.13"
tower-service = "0.3"
serde = "1.0.136"
tokio = "1"
hyper = "0.14.23"

[dev-dependencies]
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["withtrace"]
withtrace = []
withouttrace = []
