[package]
name = "axum-test-helper"
version = "0.3.0"
edition = "2021"
categories = ["development-tools::testing"]
description = "Extra utilities for axum"
homepage = "https://github.com/cloudwalk/axum-test-helper"
keywords = ["axum", "test", "test-framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cloudwalk/axum-test-helper"

[dependencies]
axum = "0.7"
http-body = "0.4"
bytes = "1.4.0"
tower = "0.4.13"
tower-service = "0.3"
serde = "1.0"
tokio = "1"
hyper = "1"
http = "1.0.0"
reqwest = { version = "0.11.23", features = ["json", "multipart"] }

[dev-dependencies]
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[features]
default = ["withtrace"]
cookies = ["reqwest/cookies"]
withtrace = []
withouttrace = []
