[package]
name = "axum-test-helper"
version = "0.4.0"
edition = "2021"
categories = ["development-tools::testing"]
description = "Extra utilities for axum"
homepage = "https://github.com/cloudwalk/axum-test-helper"
keywords = ["axum", "test", "test-framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cloudwalk/axum-test-helper"

[dependencies]
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }
http = "1.1"
http-body = "1.0"
bytes = "1.4"
tower = "0.4"
tower-service = "0.3"
serde = "1.0"
tokio = "1"
hyper = "1.0"

[dev-dependencies]
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[features]
default = ["withtrace"]
cookies = ["reqwest/cookies"]
withtrace = []
withouttrace = []
